fixed overflow issues on x axis

--- a/style.css
+++ b/style.css
@@ -82,8 +82,6 @@
     }
 }
 
-
-  
 /* Customizes the scrollbar thumb on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #888; 
@@ -101,6 +99,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: var(--black-color);
+    overflow-x: hidden;
 }
 
 html {
